# Ai_Engineering_ProfessionAI

./: .gitignore  README.md  pytest.ini
.github/workflows/: cd.yml  ci.yml
1 Python Programming/Contactease Software/: main.py  pyproject.toml  readme.md
1 Python Programming/Contactease Software/cli/: menu.py
1 Python Programming/Contactease Software/models/: contact.py
1 Python Programming/Contactease Software/repositories/: contact_repo.py
1 Python Programming/Contactease Software/services/: contact_service.py
1 Python Programming/Contactease Software/utils/: validators.py
2 C++ Programming/insurapro/: Makefile  README.md
2 C++ Programming/insurapro/errors/: gestione_errori.cpp  gestione_errori.h
2 C++ Programming/insurapro/include/: cliente.h  crm.h  interazione.h
2 C++ Programming/insurapro/src/: cliente.cpp  crm.cpp  interazione.cpp  main.cpp
3_Machine_Learning_Fundamentals/realestateAI/: main.py  readme.md
3_Machine_Learning_Fundamentals/realestateAI/reg_models/: __init__.py  modeling.py  plots.py  report.py  search.py  utils.py  workflow.py
4_Machine_Learning_Modelli_e_Algoritmi/TropicTaste Inc./: README.md  data_io.py  main.py  metrics.py  model.py  preprocessing.py  train.py
5 Deep Learning e Reti Neurali Artificiali/final project/VisionTech Solutions/: README.md  project.ipynb  setup_env.sh  training_history.csv
docker/: Dockerfile  prometheus.yml
notebooks/: consegna_finale.ipynb
src/: __init__.py
src/app/: main.py  metrics.py  schemas.py
src/utils/: drift.py  retrain.py
tests/: __init__.py  test_infer_unit.py
(+12 files in other folders)
